Make sure the navbar items never get too close to each other

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -163,11 +163,18 @@
         list-style-type: none;
         list-style-image: none;
         line-height: $nav-height;
+        margin: 0 0.5em;
         a, a:visited {
           text-transform: uppercase;
           color: $brand-dark-grey-fg;
           text-decoration: none;
         }
+      }
+      li.first {
+        margin-left: 0;
+      }
+      li.last {
+        margin-right: 0;
       }
     }
     ul.links:after {
